--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
 	
 	<link rel="stylesheet" href=>
 
+	<link rel="stylesheet" href="css/animate.css">
+
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
+	<div class="box teal"></div>
 	
-	
+	<div class="box gray"></div>
 
+	<div class="box green"></div>
 
+	<div class="box blue"></div>
+
+<div class="container animated fadeOut"></div>
+<h1>opacity: 0</h1>
+<!--when I input "display:none" into the inspector above element style my animated container is no longer there or highlighted-->
 
 </body>
 </html>
